tests/ui-fulldeps/session-diagnostic/subdiagnostic-derive.stderr
error: derive(Diagnostic): label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:52:1
   |
LL | #[label(no_crate_example)]
   | ^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:59:1
   |
LL | #[label]
   | ^

error: derive(Diagnostic): `#[foo]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:68:1
   |
LL | #[foo]
   | ^

error: derive(Diagnostic): `#[label = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:78:1
   |
LL | #[label = "..."]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive.rs:87:9
   |
LL | #[label(bug = "...")]
   |         ^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:87:1
   |
LL | #[label(bug = "...")]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive.rs:97:9
   |
LL | #[label(slug = 4)]
   |         ^^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:97:1
   |
LL | #[label(slug = 4)]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive.rs:107:9
   |
LL | #[label(slug("..."))]
   |         ^^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:107:1
   |
LL | #[label(slug("..."))]
   | ^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:117:1
   |
LL | #[label()]
   | ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive.rs:126:27
   |
LL | #[label(no_crate_example, code = "...")]
   |                           ^^^^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive.rs:135:27
   |
LL | #[label(no_crate_example, applicability = "machine-applicable")]
   |                           ^^^^^^^^^^^^^

error: derive(Diagnostic): unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:144:1
   |
LL | #[foo]
   | ^

error: derive(Diagnostic): `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:158:5
   |
LL |     #[bar]
   |     ^

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:170:5
   |
LL |     #[bar = "..."]
   |     ^

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:182:5
   |
LL |     #[bar = 4]
   |     ^

error: derive(Diagnostic): `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:194:5
   |
LL |     #[bar("...")]
   |     ^

error: derive(Diagnostic): no nested attribute expected here
  --> $DIR/subdiagnostic-derive.rs:206:13
   |
LL |     #[label(code = "...")]
   |             ^^^^

error: derive(Diagnostic): diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:206:5
   |
LL |     #[label(code = "...")]
   |     ^

error: derive(Diagnostic): the `#[primary_span]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:235:5
   |
LL |     #[primary_span]
   |     ^

error: derive(Diagnostic): label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:232:1
   |
LL | #[label(no_crate_example)]
   | ^

error: derive(Diagnostic): `#[applicability]` is only valid on suggestions
  --> $DIR/subdiagnostic-derive.rs:245:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:255:5
   |
LL |     #[bar]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: derive(Diagnostic): `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:266:5
   |
LL |     #[bar = "..."]
   |     ^

error: derive(Diagnostic): `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:277:5
   |
LL |     #[bar("...")]
   |     ^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: unexpected unsupported untagged union
  --> $DIR/subdiagnostic-derive.rs:293:1
   |
LL | / union AC {
LL | |
LL | |     span: u32,
LL | |     b: u64,
LL | | }
   | |_^

error: derive(Diagnostic): a diagnostic slug must be the first argument to the attribute
  --> $DIR/subdiagnostic-derive.rs:308:27
   |
LL | #[label(no_crate_example, no_crate::example)]
   |                           ^^^^^^^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:321:5
   |
LL |     #[primary_span]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:318:5
   |
LL |     #[primary_span]
   |     ^

error: derive(Diagnostic): subdiagnostic kind not specified
  --> $DIR/subdiagnostic-derive.rs:327:8
   |
LL | struct AG {
   |        ^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:364:46
   |
LL | #[suggestion(no_crate_example, code = "...", code = "...")]
   |                                              ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:364:32
   |
LL | #[suggestion(no_crate_example, code = "...", code = "...")]
   |                                ^^^^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:382:5
   |
LL |     #[applicability]
   |     ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:379:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): the `#[applicability]` attribute can only be applied to fields of type `Applicability`
  --> $DIR/subdiagnostic-derive.rs:392:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): suggestion without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:405:1
   |
LL | #[suggestion(no_crate_example)]
   | ^

error: derive(Diagnostic): invalid applicability
  --> $DIR/subdiagnostic-derive.rs:415:62
   |
LL | #[suggestion(no_crate_example, code = "...", applicability = "foo")]
   |                                                              ^^^^^

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:433:1
   |
LL | #[suggestion(no_crate_example, code = "...")]
   | ^

error: derive(Diagnostic): unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:447:1
   |
LL | #[label]
   | ^

error: derive(Diagnostic): `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:467:39
   |
LL | #[suggestion(no_crate_example, code = "{var}", applicability = "machine-applicable")]
   |                                       ^^^^^^^

error: derive(Diagnostic): `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:486:43
   |
LL |     #[suggestion(no_crate_example, code = "{var}", applicability = "machine-applicable")]
   |                                           ^^^^^^^

error: derive(Diagnostic): `#[suggestion_part]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:509:5
   |
LL |     #[suggestion_part]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions, use `#[primary_span]` instead

error: derive(Diagnostic): `#[suggestion_part(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:512:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:506:1
   |
LL | #[suggestion(no_crate_example, code = "...")]
   | ^

error: derive(Diagnostic): invalid nested attribute
  --> $DIR/subdiagnostic-derive.rs:521:42
   |
LL | #[multipart_suggestion(no_crate_example, code = "...", applicability = "machine-applicable")]
   |                                          ^^^^
   |
   = help: only `style` and `applicability` are valid nested attributes

error: derive(Diagnostic): multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:521:1
   |
LL | #[multipart_suggestion(no_crate_example, code = "...", applicability = "machine-applicable")]
   | ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:531:5
   |
LL |     #[suggestion_part]
   |     ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:539:5
   |
LL |     #[suggestion_part()]
   |     ^

error: derive(Diagnostic): `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:548:5
   |
LL |     #[primary_span]
   |     ^
   |
   = help: multipart suggestions use one or more `#[suggestion_part]`s rather than one `#[primary_span]`

error: derive(Diagnostic): multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:545:1
   |
LL | #[multipart_suggestion(no_crate_example)]
   | ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:556:5
   |
LL |     #[suggestion_part]
   |     ^

error: derive(Diagnostic): `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:559:5
   |
LL |     #[suggestion_part()]
   |     ^

error: derive(Diagnostic): `code` is the only valid nested attribute
  --> $DIR/subdiagnostic-derive.rs:562:23
   |
LL |     #[suggestion_part(foo = "bar")]
   |                       ^^^

error: derive(Diagnostic): the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:566:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^

error: derive(Diagnostic): the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:569:5
   |
LL |     #[suggestion_part()]
   |     ^

error: expected `,`
  --> $DIR/subdiagnostic-derive.rs:562:27
   |
LL |     #[suggestion_part(foo = "bar")]
   |                           ^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:577:37
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                                     ^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:577:23
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                       ^^^^

error: derive(Diagnostic): `#[applicability]` has no effect if all `#[suggestion]`/`#[multipart_suggestion]` attributes have a static `applicability = "..."`
  --> $DIR/subdiagnostic-derive.rs:606:5
   |
LL |     #[applicability]
   |     ^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:654:28
   |
LL |     #[suggestion_part(code("foo"))]
   |                            ^^^^^

error: unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive.rs:654:28
   |
LL |     #[suggestion_part(code("foo"))]
   |                            ^^^^^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:664:28
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                            ^^^^^

error: unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive.rs:664:28
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                            ^^^^^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:674:28
   |
LL |     #[suggestion_part(code(3))]
   |                            ^

error: unexpected token, expected `)`
  --> $DIR/subdiagnostic-derive.rs:674:28
   |
LL |     #[suggestion_part(code(3))]
   |                            ^

error: derive(Diagnostic): expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:684:28
   |
LL |     #[suggestion_part(code())]
   |                            ^

error: expected string literal
  --> $DIR/subdiagnostic-derive.rs:693:30
   |
LL |     #[suggestion_part(code = 3)]
   |                              ^

error: derive(Diagnostic): attribute specified multiple times
  --> $DIR/subdiagnostic-derive.rs:735:1
   |
LL | #[suggestion(no_crate_example, code = "", style = "hidden", style = "normal")]
   | ^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:735:1
   |
LL | #[suggestion(no_crate_example, code = "", style = "hidden", style = "normal")]
   | ^

error: derive(Diagnostic): `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:744:1
   |
LL | #[suggestion_hidden(no_crate_example, code = "")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: derive(Diagnostic): `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:752:1
   |
LL | #[suggestion_hidden(no_crate_example, code = "", style = "normal")]
   | ^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: derive(Diagnostic): invalid suggestion style
  --> $DIR/subdiagnostic-derive.rs:760:51
   |
LL | #[suggestion(no_crate_example, code = "", style = "foo")]
   |                                                   ^^^^^
   |
   = help: valid styles are `normal`, `short`, `hidden`, `verbose` and `tool-only`

error: expected string literal
  --> $DIR/subdiagnostic-derive.rs:768:51
   |
LL | #[suggestion(no_crate_example, code = "", style = 42)]
   |                                                   ^^

error: derive(Diagnostic): a diagnostic slug must be the first argument to the attribute
  --> $DIR/subdiagnostic-derive.rs:776:43
   |
LL | #[suggestion(no_crate_example, code = "", style)]
   |                                           ^^^^^

error: expected `=`
  --> $DIR/subdiagnostic-derive.rs:784:48
   |
LL | #[suggestion(no_crate_example, code = "", style("foo"))]
   |                                                ^

error: derive(Diagnostic): `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:795:5
   |
LL |     #[primary_span]
   |     ^
   |
   = note: there must be exactly one primary span
   = help: to create a suggestion with multiple spans, use `#[multipart_suggestion]` instead

error: derive(Diagnostic): suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:792:1
   |
LL | #[suggestion(no_crate_example, code = "")]
   | ^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:68:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:144:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:158:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:170:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:182:7
   |
LL |     #[bar = 4]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:194:7
   |
LL |     #[bar("...")]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:255:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:266:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:277:7
   |
LL |     #[bar("...")]
   |       ^^^

error: aborting due to 82 previous errors

